# teeclip

./: .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml
docs/: configuration.md  database.md  platform-support.md
scripts/: update-version.sh
teeclip/: __init__.py  __main__.py  _paths.py  _toml_fallback.py  _version.py  cli.py  clipboard.py  config.py  encryption.py  history.py  tee.py
tests/: conftest.py  test_cli.py  test_cli_history.py  test_clipboard.py  test_config.py  test_encryption.py  test_history.py  test_toml_fallback.py
tests/one-offs/: inspect_history_db.py  test_list_encrypted_preview.sh
